--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "siteName": "Battery Equivalents",
-  "domain": "yourdomain.com",
-  "baseUrl": "https://www.yourdomain.com",
+  "domain": "battery-equivalents.com",
+  "baseUrl": "https://www.battery-equivalents.com",
   "brandColor": "#0f172a",
   "adPlacementsEnabled": true,
   "supportEmail": "support@example.com"
